Thêm mục tài khoản Authorize Đăng nhập tk : phuhiep11395, pass: 123456 Update db mới để đăng nhập

--- a/Vimas/Areas/Admin/Views/web.config
+++ b/Vimas/Areas/Admin/Views/web.config
@@ -18,7 +18,8 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="Vimas" />
-        
+        <add namespace="Vimas.Models" />
+        <add namespace="Vimas.ViewModels" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
