--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -224,6 +224,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\TaiKhoanController.cs" />
+    <Compile Include="Areas\HocVien\Controllers\QuaTrinhHocTapController.cs" />
     <Compile Include="Areas\HocVien\Controllers\ThongTinCaNhanController.cs" />
     <Compile Include="Areas\HocVien\HocVienAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -433,6 +434,7 @@
     <Compile Include="Models\Entities\Services\NghiepDoanServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entities\Services\QuaTrinhHocTapService.cs" />
     <Compile Include="Models\Entities\Services\QuaTrinhHocTapServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
@@ -584,6 +586,7 @@
     <Compile Include="ViewModels\NghiepDoanViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\QuaTrinhHocTapEditViewModel.cs" />
     <Compile Include="ViewModels\QuaTrinhHocTapViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
@@ -2892,6 +2895,8 @@
     <Content Include="Areas\Admin\Views\TaiKhoan\Index.cshtml" />
     <Content Include="Areas\Admin\Views\TaiKhoan\Create.cshtml" />
     <Content Include="Areas\Admin\Views\TaiKhoan\Edit.cshtml" />
+    <Content Include="Areas\HocVien\Views\QuaTrinhHocTap\Create.cshtml" />
+    <Content Include="Areas\HocVien\Views\ThongTinCaNhan\Detail.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
