--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -639,6 +639,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\material-design-iconic-font.css" />
     <Content Include="Content\css\material-design-iconic-font.min.css" />
+    <Content Include="Content\css\style.css" />
     <Content Include="Content\css\theme.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\Material-Design-Iconic-Font.svg" />
