--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -225,6 +225,8 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\TaiKhoanController.cs" />
+    <Compile Include="Areas\HeThong\Controllers\TrungTamGTVLController.cs" />
+    <Compile Include="Areas\HeThong\HeThongAreaRegistration.cs" />
     <Compile Include="Areas\HocVien\Controllers\ThongTinCaNhanController.cs" />
     <Compile Include="Areas\HocVien\HocVienAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -2893,6 +2895,10 @@
     <Content Include="Areas\Admin\Views\TaiKhoan\Index.cshtml" />
     <Content Include="Areas\Admin\Views\TaiKhoan\Create.cshtml" />
     <Content Include="Areas\Admin\Views\TaiKhoan\Edit.cshtml" />
+    <Content Include="Areas\HeThong\Views\web.config" />
+    <Content Include="Areas\HeThong\Views\TrungTamGTVL\Index.cshtml" />
+    <Content Include="Areas\HeThong\Views\TrungTamGTVL\Create.cshtml" />
+    <Content Include="Areas\HeThong\Views\TrungTamGTVL\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
@@ -3027,6 +3033,8 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
+    <Folder Include="Areas\HeThong\Models\" />
+    <Folder Include="Areas\HeThong\Views\Shared\" />
     <Folder Include="Areas\HocVien\Models\" />
   </ItemGroup>
   <ItemGroup>
