--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Areas\HocVien\Controllers\QuaTrinhHocTapController.cs" />
     <Compile Include="Areas\HeThong\Controllers\TrungTamGTVLController.cs" />
     <Compile Include="Areas\HeThong\HeThongAreaRegistration.cs" />
+    <Compile Include="Areas\HocVien\Controllers\QuaTrinhLamViecController.cs" />
     <Compile Include="Areas\HocVien\Controllers\ThongTinCaNhanController.cs" />
     <Compile Include="Areas\HocVien\HocVienAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -440,6 +441,7 @@
     <Compile Include="Models\Entities\Services\QuaTrinhHocTapServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entities\Services\QuaTrinhLamViecService.cs" />
     <Compile Include="Models\Entities\Services\QuaTrinhLamViecServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
@@ -597,6 +599,7 @@
     <Compile Include="ViewModels\QuaTrinhHocTapViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\QuaTrinhLamViecEditViewModel.cs" />
     <Compile Include="ViewModels\QuaTrinhLamViecViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
@@ -2911,6 +2914,8 @@
     <Content Include="Areas\HeThong\Views\TrungTamGTVL\Create.cshtml" />
     <Content Include="Areas\HeThong\Views\TrungTamGTVL\Edit.cshtml" />
     <Content Include="Areas\HeThong\Views\TrungTamGTVL\Detail.cshtml" />
+    <Content Include="Areas\HocVien\Views\QuaTrinhLamViec\Create.cshtml" />
+    <Content Include="Areas\HocVien\Views\QuaTrinhLamViec\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
