--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -867,6 +867,7 @@
     <Content Include="Content\plugins\bootstrap-select-1.10.0\test.html" />
     <Content Include="Content\plugins\bootstrap-select\dist\css\bootstrap-select.css" />
     <Content Include="Content\plugins\bootstrap-select\dist\js\bootstrap-select.js" />
+    <Content Include="Content\plugins\bootstrap-tooltip\tooltip.js" />
     <Content Include="Content\plugins\DataTables-1.10.12\examples\advanced_init\column_render.html" />
     <Content Include="Content\plugins\DataTables-1.10.12\examples\advanced_init\complex_header.html" />
     <Content Include="Content\plugins\DataTables-1.10.12\examples\advanced_init\defaults.html" />
