--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -441,6 +441,7 @@
     <Compile Include="Models\Entities\Services\C__MigrationHistoryServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entities\Services\HopDongDOLABHocVienMappingService.cs" />
     <Compile Include="Models\Entities\Services\HopDongDOLABHocVienMappingServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
@@ -569,6 +570,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\JQueryDataTableParamModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Select2OptionModel.cs" />
     <Compile Include="Models\Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource.Designer.cs">
@@ -607,6 +609,7 @@
     <Compile Include="ViewModels\C__MigrationHistoryViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\HopDongDOLABEditViewModel.cs" />
     <Compile Include="ViewModels\HopDongDOLABHocVienMappingViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
@@ -2979,6 +2982,8 @@
     <Content Include="Areas\HeThong\Views\CongTyChungNghe\Index.cshtml" />
     <Content Include="Areas\HeThong\Views\HopDongDOLAB\Index.cshtml" />
     <Content Include="Areas\HocVien\Views\ThongTinGiaDinh\Detail.cshtml" />
+    <Content Include="Areas\HeThong\Views\HopDongDOLAB\Create.cshtml" />
+    <Content Include="Areas\HeThong\Views\HopDongDOLAB\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
