--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -2984,6 +2984,7 @@
     <Content Include="Areas\HocVien\Views\ThongTinGiaDinh\Detail.cshtml" />
     <Content Include="Areas\HeThong\Views\HopDongDOLAB\Create.cshtml" />
     <Content Include="Areas\HeThong\Views\HopDongDOLAB\Edit.cshtml" />
+    <Content Include="Areas\HeThong\Views\HopDongDOLAB\Detail.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
