--- a/Vimas/packages.config
+++ b/Vimas/packages.config
@@ -8,6 +8,7 @@
   <package id="bootstrap-select" version="1.10.0" targetFramework="net45" />
   <package id="cldrjs" version="0.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EPPlus" version="4.0.5" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
   <package id="jQuery.Validation.Globalize" version="1.1.0" targetFramework="net45" />
