Fix entity Thêm cái create systemlog Cách dùng coi trong thằng create noptien

--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -211,12 +211,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiEndpoint.cs" />
+    <Compile Include="App_GlobalResources\Messages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\SystemLogController.cs" />
     <Compile Include="Areas\Admin\Controllers\TaiKhoanController.cs" />
     <Compile Include="Areas\HeThong\Controllers\CongTyChungNgheController.cs" />
     <Compile Include="Areas\HeThong\Controllers\CongTyTiepNhanController.cs" />
@@ -243,28 +249,28 @@
     <Compile Include="Helpers\EnumHelper.cs" />
     <Compile Include="Helpers\MP5Hasher.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\Entities\AspNetRole.cs">
+    <Compile Include="Models\Entities\AspNetRoles.cs">
       <DependentUpon>VimasEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\AspNetRoleRefined.cs">
+    <Compile Include="Models\Entities\AspNetRolesRefined.cs">
       <DependentUpon>EntityRefinery.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\AspNetUser.cs">
+    <Compile Include="Models\Entities\AspNetUserClaims.cs">
       <DependentUpon>VimasEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\AspNetUserClaim.cs">
-      <DependentUpon>VimasEntities.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Entities\AspNetUserClaimRefined.cs">
+    <Compile Include="Models\Entities\AspNetUserClaimsRefined.cs">
       <DependentUpon>EntityRefinery.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\AspNetUserLogin.cs">
+    <Compile Include="Models\Entities\AspNetUserLogins.cs">
       <DependentUpon>VimasEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\AspNetUserLoginRefined.cs">
+    <Compile Include="Models\Entities\AspNetUserLoginsRefined.cs">
       <DependentUpon>EntityRefinery.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\AspNetUserRefined.cs">
+    <Compile Include="Models\Entities\AspNetUsers.cs">
+      <DependentUpon>VimasEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Entities\AspNetUsersRefined.cs">
       <DependentUpon>EntityRefinery.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entities\BangCap.cs">
@@ -338,16 +344,16 @@
     <Compile Include="Models\Entities\QuaTrinhLamViecRefined.cs">
       <DependentUpon>EntityRefinery.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Repositories\AspNetRoleRepositoryGen.cs">
+    <Compile Include="Models\Entities\Repositories\AspNetRolesRepositoryGen.cs">
       <DependentUpon>Repositories.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Repositories\AspNetUserClaimRepositoryGen.cs">
+    <Compile Include="Models\Entities\Repositories\AspNetUserClaimsRepositoryGen.cs">
       <DependentUpon>Repositories.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Repositories\AspNetUserLoginRepositoryGen.cs">
+    <Compile Include="Models\Entities\Repositories\AspNetUserLoginsRepositoryGen.cs">
       <DependentUpon>Repositories.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Repositories\AspNetUserRepositoryGen.cs">
+    <Compile Include="Models\Entities\Repositories\AspNetUsersRepositoryGen.cs">
       <DependentUpon>Repositories.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entities\Repositories\BangCapRepositoryGen.cs">
@@ -415,16 +421,16 @@
     <Compile Include="Models\Entities\Repositories\TrungTamGTVLRepositoryGen.cs">
       <DependentUpon>Repositories.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Services\AspNetRoleServiceGen.cs">
+    <Compile Include="Models\Entities\Services\AspNetRolesServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Services\AspNetUserClaimServiceGen.cs">
+    <Compile Include="Models\Entities\Services\AspNetUserClaimsServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Services\AspNetUserLoginServiceGen.cs">
+    <Compile Include="Models\Entities\Services\AspNetUserLoginsServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Entities\Services\AspNetUserServiceGen.cs">
+    <Compile Include="Models\Entities\Services\AspNetUsersServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entities\Services\BangCapServiceGen.cs">
@@ -580,19 +586,19 @@
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\AspNetRoleViewModelGen.cs">
+    <Compile Include="ViewModels\AspNetRolesViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\AspNetUserClaimViewModelGen.cs">
+    <Compile Include="ViewModels\AspNetUserClaimsViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\AspNetUserLoginViewModelGen.cs">
+    <Compile Include="ViewModels\AspNetUserLoginsViewModelGen.cs">
+      <DependentUpon>ViewModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\AspNetUsersViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\AspNetUserViewModel.cs" />
-    <Compile Include="ViewModels\AspNetUserViewModelGen.cs">
-      <DependentUpon>ViewModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="ViewModels\BangCapViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
@@ -3126,6 +3132,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
+    <Folder Include="Areas\Admin\Views\SystemLog\" />
     <Folder Include="Areas\HeThong\Models\" />
     <Folder Include="Areas\HeThong\Views\Shared\" />
     <Folder Include="Areas\HocVien\Models\" />
@@ -3142,6 +3149,10 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_GlobalResources\Messages.resx">
+      <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </Content>
     <EmbeddedResource Include="Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
