--- a/Vimas/Vimas.csproj
+++ b/Vimas/Vimas.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Areas\HocVien\Controllers\ThongTinGiaDinhController.cs" />
     <Compile Include="Areas\HocVien\Controllers\ThongTinNopTienController.cs" />
     <Compile Include="Areas\HocVien\Controllers\ThongTinPhongVanController.cs" />
+    <Compile Include="Areas\HocVien\Controllers\ThongTinVeNuocController.cs" />
     <Compile Include="Areas\HocVien\HocVienAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -491,6 +492,7 @@
     <Compile Include="Models\Entities\Services\ThongTinPhongVanServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entities\Services\ThongTinVeNuocService.cs" />
     <Compile Include="Models\Entities\Services\ThongTinVeNuocServiceGen.cs">
       <DependentUpon>Services.tt</DependentUpon>
     </Compile>
@@ -660,6 +662,7 @@
     <Compile Include="ViewModels\ThongTinPhongVanViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\ThongTinVeNuocEditViewModel.cs" />
     <Compile Include="ViewModels\ThongTinVeNuocViewModelGen.cs">
       <DependentUpon>ViewModel.tt</DependentUpon>
     </Compile>
@@ -2985,6 +2988,9 @@
     <Content Include="Areas\HeThong\Views\HopDongDOLAB\Create.cshtml" />
     <Content Include="Areas\HeThong\Views\HopDongDOLAB\Edit.cshtml" />
     <Content Include="Areas\HeThong\Views\HopDongDOLAB\Detail.cshtml" />
+    <Content Include="Areas\HocVien\Views\ThongTinVeNuoc\Detail.cshtml" />
+    <Content Include="Areas\HocVien\Views\ThongTinVeNuoc\Create.cshtml" />
+    <Content Include="Areas\HocVien\Views\ThongTinVeNuoc\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\cldr.js" />
     <Content Include="Scripts\cldr\event.js" />
